# GoPlay

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  Dockerfile  GoPlay.http  GoPlay.sln  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  USAGE.md  WeatherForecast.cs  buco  check_setup.py  go.mod  handler_ready.go  hb-prd.json  json.go  main.go  package.json  prd_output.json  prd_schema.json  pyproject.toml  report.md  rss  run.sh  superhumna-prd-local.json  superhumna-prd.json  test.js  testic.js
.github/workflows/: build-image.yml
Controllers/: WeatherForecastController.cs
Properties/: launchSettings.json
api/gql-api-go/: go.mod
api/grpc-api-go/: go.mod
api/rest-api-go/: go.mod  main.go
az-play/: HttpTriggerWithOpenAPICSharp1.cs  az-play.csproj
az-play/Properties/: launchSettings.json
ehr-cds-api/: Diabetes_HbA1c_Risk_Prediction.ipynb  config.py  database.py  main.py  models.py  requirements.txt  schemas.py  seed_db.py  test.py
ehr-cds-api/ML/: BP_Prediction_EHR_Analysis.ipynb  Metabolic_Phenotype_Clustering.ipynb
ehr-cds-api/routes/: patients.py
ehr-cds-web/: pnpm-lock.yaml
fiber/: go.mod  main.go
fiber-wallet/: go.mod  go.sum  main.go  run-api.sh
go-auth/: go.mod  go.sum  main.go
go-orm/: go.mod  main.go
go-todo/: go.mod  go.sum  main.go
growth-go/: go.mod  go.sum  main.go
helpers/: data.go  hello.go
mop/: README.md  pyproject.toml
mop/src/mop/: crew.py  main.py
public/: index.html
real_medical/: Kidney_CKD_Risk_Classification.ipynb  main.ipynb
users/: handlers.go
weather/: go.mod  main.go
(+66 files in other folders)
