[project]
name = "mop"
version = "0.1.0"
description = "mop using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
mop = "mop.main:run"
run_crew = "mop.main:run"
train = "mop.main:train"
replay = "mop.main:replay"
test = "mop.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
